--- a/requirements.txt
+++ b/requirements.txt
@@ -3,13 +3,18 @@ dj-database-url==2.3.0
 Django==5.2
 djangorestframework==3.16.0
 djangorestframework_simplejwt==5.5.0
+drf-yasg==1.21.10
 gunicorn==23.0.0
+inflection==0.5.1
 packaging==25.0
 psycopg-binary==3.2.7
 psycopg2==2.9.10
 PyJWT==2.9.0
 python-decouple==3.8
 python-dotenv==1.1.0
+pytz==2025.2
+PyYAML==6.0.2
 sqlparse==0.5.3
 typing_extensions==4.13.2
+uritemplate==4.1.1
 whitenoise==6.9.0
